<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 Phenix Real Time Solutions, Inc. Confidential and Proprietary. All rights reserved.
  -->

<resources>
    <string name="debug_about">About</string>
    <string name="debug_app_version">App version: %1$s build: %2$s</string>
    <string name="debug_sdk_version">SDK version: %1$s build: %2$s</string>
    <string name="debug_share_app_logs">Share App logs</string>
    <string name="debug_clear_app_logs">Clear App logs</string>
    <string name="debug_close">Close</string>
    <string name="debug_error_share_logs_failed">Failed to share logs</string>
    <string name="debug_error_clear_logs_failed">Failed to delete logs</string>
    <string name="debug_show_app_logs">Show App logs</string>
    <string name="debug_show_sdk_logs">Show SDK logs</string>
</resources>
