<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 Phenix Real Time Solutions, Inc. Confidential and Proprietary. All rights reserved.
  -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/debug_white"
    android:elevation="5dp"
    android:id="@+id/debug_menu"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/debug_log_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/debug_back"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_debug_item_selector"
                android:textColor="@color/debug_black"
                android:drawablePadding="12dp"
                android:text="@string/debug_close"
                app:drawableStartCompat="@drawable/ic_back"
                tools:drawableStart="@drawable/ic_back" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/debug_logs"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:stackFromEnd="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/debug_menu_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/bg_debug_item_selector"
                android:textColor="@color/debug_black"
                android:text="@string/debug_about" />

            <TextView
                android:id="@+id/debug_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_debug_item_selector"
                android:textColor="@color/debug_black"
                android:text="@string/debug_app_version" />

            <TextView
                android:id="@+id/debug_sdk_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_debug_item_selector"
                android:textColor="@color/debug_black"
                android:text="@string/debug_sdk_version" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/debug_gray" />

            <TextView
                android:id="@+id/debug_show_app"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_debug_item_selector"
                android:textColor="@color/debug_black"
                android:drawablePadding="12dp"
                android:text="@string/debug_show_app_logs"
                app:drawableStartCompat="@drawable/ic_show"
                tools:drawableStart="@drawable/ic_show" />

            <TextView
                android:id="@+id/debug_show_sdk"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_debug_item_selector"
                android:textColor="@color/debug_black"
                android:drawablePadding="12dp"
                android:text="@string/debug_show_sdk_logs"
                app:drawableStartCompat="@drawable/ic_show"
                tools:drawableStart="@drawable/ic_show" />

            <TextView
                android:id="@+id/debug_share"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_debug_item_selector"
                android:textColor="@color/debug_green"
                android:drawablePadding="12dp"
                android:text="@string/debug_share_app_logs"
                app:drawableStartCompat="@drawable/ic_share"
                tools:drawableStart="@drawable/ic_share" />

            <TextView
                android:id="@+id/debug_clear"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_debug_item_selector"
                android:textColor="@color/debug_red"
                android:drawablePadding="12dp"
                android:text="@string/debug_clear_app_logs"
                app:drawableStartCompat="@drawable/ic_delete"
                tools:drawableStart="@drawable/ic_delete" />

            <TextView
                android:id="@+id/debug_close"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_debug_item_selector"
                android:textColor="@color/debug_black"
                android:drawablePadding="12dp"
                android:text="@string/debug_close"
                app:drawableStartCompat="@drawable/ic_cancel"
                tools:drawableStart="@drawable/ic_cancel" />

        </LinearLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>
